fix spacing

--- a/resources/sass/user.scss
+++ b/resources/sass/user.scss
@@ -289,7 +289,7 @@ a {
 .card-task {
     .text-truncate {
       display: inline-block;
-      max-width: 400px;
+      max-width: 390px;
   }
 }
 
